--- a/beranda.html
+++ b/beranda.html
@@ -183,8 +183,14 @@
                     </div>
                 </div>
             </div>
-            <script src="script.js"></script>
 
+         <div class="footer">
+        <a href="https://www.instagram.com" target="_blank">Instagram</a>
+        <a href="https://www.github.com" target="_blank">GitHub</a>
+        <a href="https://www.linkedin.com" target="_blank">LinkedIn</a>
+        <a href="https://www.facebook.com" target="_blank">Facebook</a>
+         </div>
+            <script src="script.js"></script>
     </div>
 </div>
 
